--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,30 +1,28 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7690be">  <td>20/05/04 18:47:00</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_08GetDATA.fetchValuedata()[pri:0, instance:com.API_Testing.TestScripts.TC_08GetDATA@42dafa95]">fetchValuedata</td> 
-  <td>main@522764626</td>   <td></td> </tr>
-<tr bgcolor="b6bec2">  <td>20/05/04 18:47:00</td>   <td>33</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_01_PostMethods.createData()[pri:0, instance:com.API_Testing.TestScripts.TC_04_DeleteRequestData@6500df86]">createData</td> 
-  <td>main@522764626</td>   <td></td> </tr>
-<tr bgcolor="8da5ba">  <td>20/05/04 18:47:03</td>   <td>2380</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_04_DeleteRequestData.deleteData()[pri:0, instance:com.API_Testing.TestScripts.TC_04_DeleteRequestData@6500df86]">deleteData</td> 
-  <td>main@522764626</td>   <td></td> </tr>
-<tr bgcolor="bca669">  <td>20/05/04 18:47:03</td>   <td>2438</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_05_GetDatabyKey.fetchValuedata()[pri:0, instance:com.API_Testing.TestScripts.TC_05_GetDatabyKey@402a079c]">fetchValuedata</td> 
-  <td>main@522764626</td>   <td></td> </tr>
-<tr bgcolor="e2cbe0">  <td>20/05/04 18:47:03</td>   <td>2446</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_06_AddValueInExsitingData.addValueExsitingData()[pri:0, instance:com.API_Testing.TestScripts.TC_06_AddValueInExsitingData@59ec2012]">addValueExsitingData</td> 
-  <td>main@522764626</td>   <td></td> </tr>
-<tr bgcolor="be8bc2">  <td>20/05/04 18:47:03</td>   <td>2454</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_10_PostDataUsingPojo.pojoPostTest()[pri:0, instance:com.API_Testing.TestScripts.TC_10_PostDataUsingPojo@4cf777e8]">pojoPostTest</td> 
-  <td>main@522764626</td>   <td></td> </tr>
-<tr bgcolor="feb3fa">  <td>20/05/04 18:47:03</td>   <td>2811</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_09CompareJSonTwoFile.comparetoJson()[pri:0, instance:com.API_Testing.TestScripts.TC_09CompareJSonTwoFile@2f686d1f]">comparetoJson</td> 
-  <td>main@522764626</td>   <td></td> </tr>
-<tr bgcolor="b6bec2">  <td>20/05/04 18:47:03</td>   <td>2831</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_01_PostMethods.createData()[pri:0, instance:com.API_Testing.TestScripts.TC_02_GetPerticulerIddata@3fee9989]">createData</td> 
-  <td>main@522764626</td>   <td></td> </tr>
-<tr bgcolor="bd9462">  <td>20/05/04 18:47:03</td>   <td>2896</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_02_GetPerticulerIddata.getIDData()[pri:0, instance:com.API_Testing.TestScripts.TC_02_GetPerticulerIddata@3fee9989]">getIDData</td> 
-  <td>main@522764626</td>   <td></td> </tr>
-<tr bgcolor="b6bec2">  <td>20/05/04 18:47:03</td>   <td>2934</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_01_PostMethods.createData()[pri:0, instance:com.API_Testing.TestScripts.TC_01_PostMethods@73ad2d6]">createData</td> 
-  <td>main@522764626</td>   <td></td> </tr>
-<tr bgcolor="b6bec2">  <td>20/05/04 18:47:03</td>   <td>2991</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_01_PostMethods.createData()[pri:0, instance:com.API_Testing.TestScripts.TC_03_PUTRequest@7085bdee]">createData</td> 
-  <td>main@522764626</td>   <td></td> </tr>
-<tr bgcolor="8f8f71">  <td>20/05/04 18:47:03</td>   <td>3050</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_03_PUTRequest.updateRecord()[pri:0, instance:com.API_Testing.TestScripts.TC_03_PUTRequest@7085bdee]">updateRecord</td> 
-  <td>main@522764626</td>   <td></td> </tr>
-<tr bgcolor="93948d">  <td>20/05/04 18:47:04</td>   <td>3083</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_07_ReplaceDynamicjSonVarialbles.replaceVarialbes()[pri:0, instance:com.API_Testing.TestScripts.TC_07_ReplaceDynamicjSonVarialbles@1ce92674]">replaceVarialbes</td> 
-  <td>main@522764626</td>   <td></td> </tr>
+<tr bgcolor="a863b6">  <td>20/05/05 14:48:26</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_01_PostMethods.createData()[pri:0, instance:com.API_Testing.TestScripts.TC_01_PostMethods@1b68ddbd]">createData</td> 
+  <td>main@1391942103</td>   <td></td> </tr>
+<tr bgcolor="e87285">  <td>20/05/05 14:48:29</td>   <td>2637</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_10_PostDataUsingPojo.pojoPostTest()[pri:0, instance:com.API_Testing.TestScripts.TC_10_PostDataUsingPojo@646d64ab]">pojoPostTest</td> 
+  <td>main@1391942103</td>   <td></td> </tr>
+<tr bgcolor="a863b6">  <td>20/05/05 14:48:29</td>   <td>3008</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_01_PostMethods.createData()[pri:0, instance:com.API_Testing.TestScripts.TC_03_PUTRequest@59e5ddf]">createData</td> 
+  <td>main@1391942103</td>   <td></td> </tr>
+<tr bgcolor="c09f7f">  <td>20/05/05 14:48:29</td>   <td>3067</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_03_PUTRequest.updateRecord()[pri:0, instance:com.API_Testing.TestScripts.TC_03_PUTRequest@59e5ddf]">updateRecord</td> 
+  <td>main@1391942103</td>   <td></td> </tr>
+<tr bgcolor="c0a365">  <td>20/05/05 14:48:29</td>   <td>3131</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_07_ReplaceDynamicjSonVarialbles.replaceVarialbes()[pri:0, instance:com.API_Testing.TestScripts.TC_07_ReplaceDynamicjSonVarialbles@536aaa8d]">replaceVarialbes</td> 
+  <td>main@1391942103</td>   <td></td> </tr>
+<tr bgcolor="a863b6">  <td>20/05/05 14:48:45</td>   <td>18491</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_01_PostMethods.createData()[pri:0, instance:com.API_Testing.TestScripts.TC_04_DeleteRequestData@e320068]">createData</td> 
+  <td>main@1391942103</td>   <td></td> </tr>
+<tr bgcolor="e3c998">  <td>20/05/05 14:48:45</td>   <td>18559</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_04_DeleteRequestData.deleteData()[pri:0, instance:com.API_Testing.TestScripts.TC_04_DeleteRequestData@e320068]">deleteData</td> 
+  <td>main@1391942103</td>   <td></td> </tr>
+<tr bgcolor="a863b6">  <td>20/05/05 14:48:45</td>   <td>18615</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_01_PostMethods.createData()[pri:0, instance:com.API_Testing.TestScripts.TC_02_GetPerticulerIddata@1f57539]">createData</td> 
+  <td>main@1391942103</td>   <td></td> </tr>
+<tr bgcolor="83967b">  <td>20/05/05 14:48:45</td>   <td>18673</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_02_GetPerticulerIddata.getIDData()[pri:0, instance:com.API_Testing.TestScripts.TC_02_GetPerticulerIddata@1f57539]">getIDData</td> 
+  <td>main@1391942103</td>   <td></td> </tr>
+<tr bgcolor="c273d3">  <td>20/05/05 14:48:45</td>   <td>18713</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_06_AddValueInExsitingData.addValueExsitingData()[pri:0, instance:com.API_Testing.TestScripts.TC_06_AddValueInExsitingData@76f2b07d]">addValueExsitingData</td> 
+  <td>main@1391942103</td>   <td></td> </tr>
+<tr bgcolor="a29665">  <td>20/05/05 14:48:45</td>   <td>18724</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_05_GetDatabyKey.fetchValuedata()[pri:0, instance:com.API_Testing.TestScripts.TC_05_GetDatabyKey@704a52ec]">fetchValuedata</td> 
+  <td>main@1391942103</td>   <td></td> </tr>
+<tr bgcolor="998b7c">  <td>20/05/05 14:48:45</td>   <td>18731</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_09CompareJSonTwoFile.comparetoJson()[pri:0, instance:com.API_Testing.TestScripts.TC_09CompareJSonTwoFile@6ee52dcd]">comparetoJson</td> 
+  <td>main@1391942103</td>   <td></td> </tr>
 </table>
