--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\Neelam-Sonu\AppData\Local\Temp\testng-eclipse-146012468\testng-customsuite.xml</span>
+                    <span>C:\Users\Neelam-Sonu\AppData\Local\Temp\testng-eclipse-762715030\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">2 methods,   2 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -104,7 +104,12 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.API_Testing.TestScripts.TC_07_ReplaceDynamicjSonVarialbles" hash-for-method="replaceVarialbes">replaceVarialbes</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.API_Testing.TestScripts.TC_03_PUTRequest" hash-for-method="createData">createData</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.API_Testing.TestScripts.TC_03_PUTRequest" hash-for-method="updateRecord">updateRecord</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -122,14 +127,21 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.API_Testing.TestScripts.TC_07_ReplaceDynamicjSonVarialbles</span>
+              <span class="class-name">com.API_Testing.TestScripts.TC_03_PUTRequest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="replaceVarialbes">
-                  </a> <!-- replaceVarialbes -->
-                  <span class="method-name">replaceVarialbes</span>
+                  <a name="createData">
+                  </a> <!-- createData -->
+                  <span class="method-name">createData</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="updateRecord">
+                  </a> <!-- updateRecord -->
+                  <span class="method-name">updateRecord</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -137,7 +149,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Neelam-Sonu\AppData\Local\Temp\testng-eclipse-146012468\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Neelam-Sonu\AppData\Local\Temp\testng-eclipse-762715030\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -146,7 +158,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test thread-count=&quot;5&quot; verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.API_Testing.TestScripts.TC_07_ReplaceDynamicjSonVarialbles&quot;/&gt;
+      &lt;class name=&quot;com.API_Testing.TestScripts.TC_03_PUTRequest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -186,16 +198,20 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'replaceVarialbes')
-data.setCell(0, 2, 'com.API_Testing.TestScripts.TC_07_ReplaceDynamicjSonVarialbles')
-data.setCell(0, 3, 29952);
+data.setCell(0, 1, 'createData')
+data.setCell(0, 2, 'com.API_Testing.TestScripts.TC_03_PUTRequest')
+data.setCell(0, 3, 3098);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'updateRecord')
+data.setCell(1, 2, 'com.API_Testing.TestScripts.TC_03_PUTRequest')
+data.setCell(1, 3, 48);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 29 seconds</span>
+              <span class="suite-total-time">Total running time: 3 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -221,10 +237,30 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.API_Testing.TestScripts.TC_07_ReplaceDynamicjSonVarialbles</div> <!-- chronological-class-name -->
-              <div class="test-method">
-                <span class="method-name">replaceVarialbes</span>
+              <div class="chronological-class-name">com.API_Testing.TestScripts.TC_03_PUTRequest</div> <!-- chronological-class-name -->
+              <div class="configuration-method before">
+                <span class="method-name">jsonBody</span>
                 <span class="method-start">0 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="configuration-method before">
+                <span class="method-name">dataForUpdateExisitingRecords</span>
+                <span class="method-start">12 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">createData</span>
+                <span class="method-start">12 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method before">
+                <span class="method-name">jsonBody</span>
+                <span class="method-start">3118 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="configuration-method before">
+                <span class="method-name">dataForUpdateExisitingRecords</span>
+                <span class="method-start">3118 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">updateRecord</span>
+                <span class="method-start">3121 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
