--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,16 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="886778">  <td>20/05/06 16:55:52</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_01_PostMethods.createData()[pri:0, instance:com.API_Testing.TestScripts.TC_03_PUTRequest@536aaa8d]">createData</td> 
-  <td>main@1250391581</td>   <td></td> </tr>
-<tr bgcolor="a863b6">  <td>20/05/06 16:55:52</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_03_PUTRequest.dataForUpdateExisitingRecords()[pri:0, instance:com.API_Testing.TestScripts.TC_03_PUTRequest@536aaa8d]">&gt;&gt;dataForUpdateExisitingRecords</td> 
-<td>&nbsp;</td>  <td>main@1250391581</td>   <td></td> </tr>
-<tr bgcolor="a863b6">  <td>20/05/06 16:55:55</td>   <td>3109</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_03_PUTRequest.dataForUpdateExisitingRecords()[pri:0, instance:com.API_Testing.TestScripts.TC_03_PUTRequest@536aaa8d]">&gt;&gt;dataForUpdateExisitingRecords</td> 
-<td>&nbsp;</td>  <td>main@1250391581</td>   <td></td> </tr>
-<tr bgcolor="886778">  <td>20/05/06 16:55:52</td>   <td>-10</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_01_PostMethods.jsonBody()[pri:0, instance:com.API_Testing.TestScripts.TC_03_PUTRequest@536aaa8d]">&gt;&gt;jsonBody</td> 
-<td>&nbsp;</td>  <td>main@1250391581</td>   <td></td> </tr>
-<tr bgcolor="886778">  <td>20/05/06 16:55:55</td>   <td>3106</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_01_PostMethods.jsonBody()[pri:0, instance:com.API_Testing.TestScripts.TC_03_PUTRequest@536aaa8d]">&gt;&gt;jsonBody</td> 
-<td>&nbsp;</td>  <td>main@1250391581</td>   <td></td> </tr>
-<tr bgcolor="a863b6">  <td>20/05/06 16:55:55</td>   <td>3109</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_03_PUTRequest.updateRecord()[pri:0, instance:com.API_Testing.TestScripts.TC_03_PUTRequest@536aaa8d]">updateRecord</td> 
-  <td>main@1250391581</td>   <td></td> </tr>
+<tr bgcolor="a863b6">  <td>20/05/06 17:16:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_4_PatchRequest.dataForUpdate()[pri:0, instance:com.API_Testing.TestScripts.TC_4_PatchRequest@2d8f65a4]">&gt;&gt;dataForUpdate</td> 
+<td>&nbsp;</td>  <td>main@1780132728</td>   <td></td> </tr>
+<tr bgcolor="a863b6">  <td>20/05/06 17:16:59</td>   <td>9</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_4_PatchRequest.updateSpecificData()[pri:0, instance:com.API_Testing.TestScripts.TC_4_PatchRequest@2d8f65a4]">updateSpecificData</td> 
+  <td>main@1780132728</td>   <td></td> </tr>
 </table>
